<resources>
    <string name="app_name">Android app - Kenny Passenier</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Add movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="addMovieButton">Add new movie</string>
    <string name="movieName">Name of the movie</string>
    <string name="director">Director</string>
    <string name="plot">Plot</string>
    <string name="releaseDate">Release date</string>
    <string name="title">Title</string>
    <string name="darkModeSwitchText">Toggle dark mode</string>
    <string name="standardLoadingText">Loading data</string>
    <string name="movieImageContentDescription">Poster image</string>
    <string name="jsonException">Couldn\'t find data online</string>
    <string name="volleyException">Something has gone wrong with our request</string>
    <string name="movieIdException">Movie ID not found</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>